--- a/SemesterWork/src/main/resources/messages/messages_en.properties
+++ b/SemesterWork/src/main/resources/messages/messages_en.properties
@@ -4,6 +4,7 @@ sign_up.field.email=Email
 sign_up.field.password=Password
 sign_up.field.firstname=Name
 sign_up.field.lastname=Surname
+sign_in.title=Sign in
 errors.incorrect.email=Invalid email
 errors.invalid.password=Invalid password
 errors.invalid.names=Invalid name
