--- a/SemesterWork/src/main/resources/messages/messages_ru.properties
+++ b/SemesterWork/src/main/resources/messages/messages_ru.properties
@@ -4,6 +4,7 @@ sign_up.field.email=Почта
 sign_up.field.password=Пароль
 sign_up.field.firstname=Имя
 sign_up.field.lastname=Фамилия
+sign_in.title=Аутентификация
 remember-me=Запомни меня
 errors.incorrect.email=Некорректная почта
 errors.invalid.password=Слабый пароль
